fixed assessment and recommedation